# how

./: .gitignore  README.md  pyproject.toml
contrib/: how.fish  how.zsh
how/: main.py
