[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "how-cli-assist"
version = "2.1.1"
description = "Terminal assistant generating accurate shell commands"
authors = [{ name = "Adem Kouki" }]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
    "pyperclip",
    "psutil"
]
requires-python = ">=3.8"

[project.scripts]
how = "how.main:main"
